# EpxertSystem

./: CMakeLists.txt  README.md  author
Includes/: BackwardChaining.class.hpp  Engine.class.hpp  Errors.hpp  Fact.class.hpp  GetTargets.class.hpp  Op.class.hpp  Parse.hpp  ReturnCodes.hpp  ReversePolishNotation.class.hpp  Rule.class.hpp  State.class.hpp
srcs/: BackwardChaining.class.coplien.cpp  BackwardChaining.class.cpp  Engine.class.base.cpp  Engine.class.coplien.cpp  Engine.class.cpp  Engine.class.init.cpp  Fact.class.cpp  GetTargets.class.cpp  Op.class.cpp  Parse.cpp  ReversePolishNotation.class.coplien.cpp  ReversePolishNotation.class.cpp  Rule.class.coplien.cpp  Rule.class.cpp  State.class.coplien.cpp  State.class.cpp  main.cpp
